# rknn_yolox_detector

./: CMakeLists.txt  CMakeLists2.txt  build-linux_RK3588.sh
include/: ThreadPool.hpp  common.h  idetector.h  model_inference.h  v4l2_capture.hpp
src/: idetector.cpp  main.cc  model_inference.cpp  model_inference_old.cpp  postprocess.cc
